Use loop-control to allocate loop device.
This patch changes virFileLoopDeviceOpen() to use the new loop-control
device to allocate a new loop device.  If this behavior is unsupported
we fall back to the previous method of searching /dev for a free device.

With this patch you can start as many image based LXC domains as you
like (well almost).

Fixes bug https://bugzilla.redhat.com/show_bug.cgi?id=995543

--- a/configure.ac
+++ b/configure.ac
@@ -921,6 +921,18 @@ if test "$with_lxc" = "yes" || test "$with_lxc" = "check"; then
             AC_MSG_ERROR([Required kernel features for LXC were not found])
         fi
     ])
+    AC_LINK_IFELSE([AC_LANG_PROGRAM(
+    [[
+        #include <sched.h>
+        #include <linux/loop.h>
+        #include <sys/epoll.h>
+    ]], [[
+        unshare(!(LOOP_CTL_GET_FREE));
+    ]])], [
+       AC_DEFINE([HAVE_DECL_LOOP_CTL_GET_FREE], [1],
+         [Define to 1 if you have the declaration of `LOOP_CTL_GET_FREE',
+         and to 0 if you don't.])
+    ])
 fi
 if test "$with_lxc" = "yes" ; then
     AC_DEFINE_UNQUOTED([WITH_LXC], 1, [whether LXC driver is enabled])
